# forecast-anything

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
design-notes/: unified-claims.md
forecast_anything/: __init__.py  cli.py  database.py  distributions.py  models.py  schemas.py  scoring.py  store.py
scripts/: score_latest_actuals.py
tests/: test_scoring.py
